--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 	<div id="stuff" class="container">
 		<div id="status" class="row">That word/phrase is not in Urban Dictionary!</div>
 		<br>
-		<div id="gifs" class="row"></div>
+		<div id="gifs" class="row">
+		</div>
 	</div>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
